# tyra

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLATFORMS.md  README.ja.md  README.md  SECURITY.md  llms.txt  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  spec_question.md
.github/workflows/: release-gate.yml  release.yml  static-corpus.yml
bench/ai-gen/: INSIGHTS.md  METHODOLOGY.md  README.md  config.yaml  diff_runs.py  harness.py  replay.py  report.py  results-run51-manifest.csv  results-run53-manifest.csv  results-run53.csv  results-run55-manifest.csv  results-run56-manifest.csv
bench/smoke/: coverage_smoke_test.tyra  isolation_smoke_test.tyra  map_generic_smoke_test.tyra  panic_expect_smoke_test.ty  set_smoke_test.tyra  test_name_non_ascii_smoke_test.ty  test_name_panics_block_smoke_test.tyra  test_name_syntax_smoke_test.ty
bench/static-corpus/: 01-hello.tyra  02-fibonacci.tyra  04-http-handler.ty  04-http-handler.tyra  05-json-parsing.tyra  06-cli-args.ty  06-cli-args.tyra  07-state-machine.ty  08-async-tasks.ty  08-async-tasks.tyra  09-error-handling.ty  10-data-modeling.ty  11-break-loop.ty  12-continue.ty  13-long-running-strings.ty  14-float-display.tyra  15-lambda-non-capturing.ty  16-lambda-value-capture.ty  17-list-map-filter-fold.tyra  18-list-str-map-filter-fold.ty  18-list-str-map-filter-fold.tyra  19-assert-eq-generic.tyra  20-math_bench.ty  21-map-persistent.tyra  22-set-remove.ty  23-for-kv-in-map.ty  24-for-v-in-set.ty  25-nested-match-map-get.ty  25-nested-match-map-get.tyra  26-linked-map-order.tyra  27-hm-inference-empty-map.ty  28-linked-set.tyra  29-linked-map-remove-tombstone.tyra  30-linked-set-remove-tombstone.ty  31-tuples.ty  32-linked-map-from.ty  33-sorted-map-order.ty  34-sorted-set-order.ty  35-string-chars-list-sort.ty  README.md  (+13 more)
compiler/: AGENTS.md  CLAUDE.md  Cargo.toml
compiler/crates/tyra-ast/: Cargo.toml
compiler/crates/tyra-ast/src/: lib.rs  types.rs
compiler/crates/tyra-cli/: Cargo.toml
compiler/crates/tyra-cli/src/: main.rs
compiler/crates/tyra-codegen-llvm/: Cargo.toml  build.rs
compiler/crates/tyra-codegen-llvm/src/: builtins.rs  codegen.rs  coverage.rs  dwarf.rs  helpers.rs  inkwell_builtins.rs  inkwell_closure.rs  inkwell_codegen.rs  inkwell_concurrency.rs  inkwell_coverage.rs  inkwell_dwarf.rs  inkwell_http_builtins.rs  inkwell_instr.rs  inkwell_list.rs  inkwell_list_builtins.rs  inkwell_list_higher.rs  inkwell_map_builtins.rs  inkwell_string_builtins.rs  instr_emit.rs  lib.rs  list_codegen.rs  type_scan.rs
compiler/crates/tyra-diagnostics/: Cargo.toml
compiler/crates/tyra-diagnostics/src/: diagnostic.rs  json.rs  lib.rs  report.rs  source.rs  span.rs
compiler/crates/tyra-driver/: Cargo.toml
compiler/crates/tyra-driver/src/: lib.rs
compiler/crates/tyra-lexer/: Cargo.toml
compiler/crates/tyra-lexer/src/: cursor.rs  lexer.rs  lib.rs  token.rs
compiler/crates/tyra-mir/: Cargo.toml
compiler/crates/tyra-mir/src/: ir.rs  lib.rs  lower.rs  monomorphize.rs
compiler/crates/tyra-mir/src/lower/: adt.rs  call.rs  expr.rs  match_lower.rs  method.rs  mod.rs  propagate.rs  types.rs
compiler/crates/tyra-parser/: Cargo.toml
compiler/crates/tyra-parser/src/: decl.rs  expr.rs  lib.rs  pattern.rs  stmt.rs  token_stream.rs  type_expr.rs
compiler/crates/tyra-resolve/: Cargo.toml
compiler/crates/tyra-resolve/src/: lib.rs  resolver.rs  scope.rs
compiler/crates/tyra-types/: Cargo.toml
compiler/crates/tyra-types/src/: checker.rs  lib.rs  ty.rs
docs/: positioning.md  strategy.md
docs/comparisons/: vs-crystal.md
docs/design/: 0001-adt-data-semantics.md  0002-float-no-eq.md  0003-stdlib-minimal-scope.md  0004-unify-propagation-operator.md  0005-multi-constraint-generics.md  0006-top-level-expressions.md  0007-boehm-gc-reference-impl.md  0008-test-runner.md  0009-project-manifest.md  0010-dependency-resolution.md  0011-closure-representation.md  0012-panic-semantics.md  0013-test-name-syntax.md  0014-source-location-and-debug-info.md  0015-generic-collections.md  0016-persistent-collections.md  0017-diagnostic-quality.md  0018-inkwell-migration.md  0019-linked-collections.md  0020-hm-inference.md  0021-windows-support.md  0025-source-file-extension.md  0026-machine-readable-diagnostics.md  0027-string-char-api.md  0028-checker-module-signatures.md  0029-err-main-semantics.md  README.md
docs/getting-started/: 01-installation.md  02-hello-world.md  README.md  (+8 more)
examples/: 01-hello.tyra  02-fibonacci.tyra  03-option-result.ty  03-option-result.tyra  04-http-handler.tyra  05-json-parsing.tyra  06-cli-args.tyra  07-state-machine.tyra  08-async-tasks.tyra  09-error-handling.tyra  10-data-modeling.tyra  11-stdlib-time-log.ty  11-stdlib-time-log.tyra
runtime/: Cargo.toml  build.rs
runtime/src/: cov.rs  gc_string.rs  lib.rs  stdlib_display.rs  stdlib_float.rs  stdlib_fs.rs  stdlib_http.rs  stdlib_http_server.rs  stdlib_io.rs  stdlib_json.rs  stdlib_linked_map.rs  stdlib_linked_set.rs  stdlib_list.rs  stdlib_log.rs  stdlib_map.rs  stdlib_set.rs  stdlib_sorted_map.rs  stdlib_sorted_set.rs  stdlib_string.rs  stdlib_time.rs
scripts/: gen_llms_docs.py  install.sh
stdlib/: AGENTS.md  CLAUDE.md  assert.tyra  float.tyra  fs.tyra  io.tyra  json.tyra  linked_map.ty  linked_map.tyra  linked_set.tyra  list.ty  list.tyra  log.tyra  map.ty  set.ty  sorted_map.ty  sorted_set.ty  string.ty  string.tyra  time.tyra
tools/lsp/tyra-lsp/: Cargo.toml
tools/lsp/tyra-lsp/src/: call_hierarchy.rs  code_action.rs  code_lens.rs  completion.rs  declaration.rs  document_link.rs  file_delete.rs  file_rename.rs  folding.rs  implementation.rs  inlay.rs  keywords.rs  main.rs  outline.rs  references.rs  rename.rs  selection_range.rs  signature.rs  tests.rs  tokens.rs  type_definition.rs  type_hierarchy.rs  workspace_symbol.rs
tools/tyra-fmt/: Cargo.toml
tools/tyra-fmt/src/: lib.rs  printer.rs
tools/tyra-fmt/tests/: golden.rs
tools/tyra-manifest/: Cargo.toml
tools/tyra-manifest/src/: detect.rs  lib.rs  lockfile.rs
tools/tyra-pkg/: Cargo.toml
tools/tyra-pkg/src/: lib.rs
(+5621 files in other folders)
