[package]
name = "tyra-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tyra_runtime"
# Both staticlib (for linking into Tyra-compiled binaries via clang -ltyra_runtime)
# and rlib (so Rust tests can exercise the API directly).
crate-type = ["staticlib", "rlib"]

[features]
default = []
# Enable Boehm GC thread registration (GC_register_my_thread / GC_get_stack_base
# / GC_unregister_my_thread). Required when the staticlib is linked into a
# Tyra binary that allocates via GC_malloc. Disabled for cargo-test so the
# rlib does not carry unresolved libgc symbols.
libgc = []

[dependencies]
crossbeam-channel = "0.5"

[dev-dependencies]
