[package]
name = "tyra-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tyra_runtime"
# Both staticlib (for linking into Tyra-compiled binaries via clang -ltyra_runtime)
# and rlib (so Rust tests can exercise the API directly).
crate-type = ["staticlib", "rlib"]

# Boehm GC thread registration is always compiled in (ADR-0007); build.rs
# arranges for `-lgc` to be passed at link time for both the staticlib and
# any downstream consumer (Rust tests and the tyra binary alike).
# No `links = "gc"` because libgc is also linked directly by the Tyra
# driver when producing user binaries, and Cargo disallows duplicate
# `links` claims across the workspace.

[dependencies]
crossbeam-channel = "0.5"

[dev-dependencies]
