[package]
name = "tyra-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
name = "tyra_runtime"
# Both staticlib (for linking into Tyra-compiled binaries via clang -ltyra_runtime)
# and rlib (so Rust tests can exercise the API directly).
crate-type = ["staticlib", "rlib"]

# Boehm GC thread registration is always compiled in (ADR-0007); build.rs
# arranges for `-lgc` to be passed at link time for both the staticlib and
# any downstream consumer (Rust tests and the tyra binary alike).
# No `links = "gc"` because libgc is also linked directly by the Tyra
# driver when producing user binaries, and Cargo disallows duplicate
# `links` claims across the workspace.

[dependencies]
crossbeam-channel = "0.5"
# ureq: small blocking HTTP client with rustls TLS. Chosen over libcurl FFI
# to keep the system-library surface consistent with the rest of Tyra's
# runtime (pure Rust), at the cost of ~200 transitive crates. rustls-tls
# avoids the native OpenSSL / SecureTransport dependency.
ureq = { version = ">=2.12, <3", default-features = false, features = ["tls"] }

[dev-dependencies]
