[package]
name = "tyra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for the Tyra language compiler"

[[bin]]
name = "tyra"
path = "src/main.rs"

[dependencies]
tyra-ast.workspace = true
tyra-diagnostics.workspace = true
tyra-driver.workspace = true
tyra-fmt.workspace = true
# Pulled in to force `cargo build -p tyra-cli` to also build the runtime
# staticlib that the driver links into Tyra binaries. The rlib itself is
# unused from Rust-side code (see tyra_runtime as _ below).
tyra-runtime.workspace = true
