[package]
name = "tyra-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Compilation pipeline driver for the Tyra language"

[dependencies]
tyra-ast.workspace = true
tyra-diagnostics.workspace = true
tyra-parser.workspace = true
tyra-resolve.workspace = true
tyra-types.workspace = true
tyra-mir.workspace = true
tyra-codegen-llvm.workspace = true
tyra-manifest.workspace = true
