[package]
name = "tyra-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Compilation pipeline driver for the Tyra language"

[dependencies]
tyra-ast.workspace = true
tyra-diagnostics.workspace = true
tyra-parser.workspace = true
tyra-resolve.workspace = true
tyra-types.workspace = true
tyra-mir.workspace = true
tyra-codegen-llvm.workspace = true
tyra-manifest.workspace = true

[features]
# Forward the LLVM version feature down to tyra-codegen-llvm.
default = ["llvm22-1"]
llvm19-1 = ["tyra-codegen-llvm/llvm19-1"]
llvm20-1 = ["tyra-codegen-llvm/llvm20-1"]
llvm21-1 = ["tyra-codegen-llvm/llvm21-1"]
llvm22-1 = ["tyra-codegen-llvm/llvm22-1"]

[dev-dependencies]
tempfile = "3"
