[package]
name = "tyra-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Type checker for the Tyra language (spec §8)"

[dependencies]
tyra-diagnostics.workspace = true
tyra-ast.workspace = true

[dev-dependencies]
tyra-parser.workspace = true
tyra-resolve.workspace = true
