[package]
name = "tyra-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Language Server Protocol implementation for Tyra"

[[bin]]
name = "tyra-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tyra-ast = { workspace = true }
tyra-driver = { workspace = true }
tyra-diagnostics = { workspace = true }
tyra-lexer = { workspace = true }

[dev-dependencies]
tower = "0.4"
futures = "0.3"
tyra-parser = { workspace = true }
