[package]
name = "tyra-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Language Server Protocol implementation for Tyra"

[[bin]]
name = "tyra-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tyra-ast = { workspace = true }
tyra-driver = { workspace = true }
tyra-diagnostics = { workspace = true }
tyra-lexer = { workspace = true }

[features]
# Forward LLVM version feature through tyra-driver to tyra-codegen-llvm.
default = ["llvm22-1"]
llvm19-1 = ["tyra-driver/llvm19-1"]
llvm20-1 = ["tyra-driver/llvm20-1"]
llvm21-1 = ["tyra-driver/llvm21-1"]
llvm22-1 = ["tyra-driver/llvm22-1"]

[dev-dependencies]
tower = "0.4"
futures = "0.3"
tyra-parser = { workspace = true }
